version/0.2/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the project.

.. vale off

.. towncrier release notes start

`0.2.0 <https://github.com/ansys/pyconceptev/releases/tag/v0.2.0>`_ - 2024-07-30
================================================================================

Changed
^^^^^^^

- chore: update CHANGELOG for v0.1.5 `#89 <https://github.com/ansys/pyconceptev/pull/89>`_

`0.1.5 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.5>`_ - 2024-07-29
================================================================================

Added
^^^^^

- ansys id login `#78 <https://github.com/ansys/pyconceptev/pull/78>`_


Changed
^^^^^^^

- chore: update CHANGELOG for v0.1.4 `#69 <https://github.com/ansys/pyconceptev/pull/69>`_


Fixed
^^^^^

- slowed down pinging the results server `#80 <https://github.com/ansys/pyconceptev/pull/80>`_
- Fix/documentation links `#88 <https://github.com/ansys/pyconceptev/pull/88>`_


Dependencies
^^^^^^^^^^^^

- CHORE: Bump ansys-sphinx-theme from 0.16.5 to 0.16.6 `#70 <https://github.com/ansys/pyconceptev/pull/70>`_
- CHORE: Bump twine from 5.1.0 to 5.1.1 `#76 <https://github.com/ansys/pyconceptev/pull/76>`_
- CHORE: Bump importlib-metadata from 7.1.0 to 8.2.0 `#81 <https://github.com/ansys/pyconceptev/pull/81>`_
- CHORE: Bump jupyterlab from 4.2.2 to 4.2.4 `#82 <https://github.com/ansys/pyconceptev/pull/82>`_
- CHORE: Bump sphinx-autodoc-typehints from 2.1.1 to 2.2.3 `#83 <https://github.com/ansys/pyconceptev/pull/83>`_
- CHORE: Bump tox from 4.15.1 to 4.16.0 `#84 <https://github.com/ansys/pyconceptev/pull/84>`_
- CHORE: Bump sphinx from 7.3.7 to 7.4.7 `#85 <https://github.com/ansys/pyconceptev/pull/85>`_
- CHORE: Bump plotly from 5.22.0 to 5.23.0 `#86 <https://github.com/ansys/pyconceptev/pull/86>`_
- CHORE: Bump jupytext from 1.16.2 to 1.16.3 `#87 <https://github.com/ansys/pyconceptev/pull/87>`_

`0.1.4 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.4>`_ - 2024-06-13
================================================================================

Changed
^^^^^^^

- chore: update CHANGELOG for v0.1.3 `#67 <https://github.com/ansys/pyconceptev/pull/67>`_
- DOCS: Update URLs to match new CNAME `#68 <https://github.com/ansys/pyconceptev/pull/68>`_

`0.1.3 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.3>`_ - 2024-06-12
================================================================================

Changed
^^^^^^^

- chore: update CHANGELOG for v0.1.2 `#53 <https://github.com/ansys/pyconceptev/pull/53>`_
- CI: Use Trusted Publisher to release package `#59 <https://github.com/ansys/pyconceptev/pull/59>`_
- DOCS: Use ansys org instead of internal `#61 <https://github.com/ansys/pyconceptev/pull/61>`_
- DOC: Fix typo in pyproject.toml `#62 <https://github.com/ansys/pyconceptev/pull/62>`_
- CHORE: Use new repository name `#63 <https://github.com/ansys/pyconceptev/pull/63>`_
- CI: Refact release job `#66 <https://github.com/ansys/pyconceptev/pull/66>`_


Dependencies
^^^^^^^^^^^^

- CHORE: Bump pytest-cov from 4.1.0 to 5.0.0 `#38 <https://github.com/ansys/pyconceptev/pull/38>`_
- CHORE: Bump sphinx-autodoc-typehints from 2.1.0 to 2.1.1 `#56 <https://github.com/ansys/pyconceptev/pull/56>`_
- CHORE: Bump pytest from 7.4.4 to 8.2.2 `#57 <https://github.com/ansys/pyconceptev/pull/57>`_
- CHORE: Bump tox from 4.15.0 to 4.15.1 `#58 <https://github.com/ansys/pyconceptev/pull/58>`_
- CHORE: Bump jupyterlab from 4.2.1 to 4.2.2 `#60 <https://github.com/ansys/pyconceptev/pull/60>`_


Miscellaneous
^^^^^^^^^^^^^

- DOCS: Minor doc edits based on doc rendering `#55 <https://github.com/ansys/pyconceptev/pull/55>`_

`0.1.2 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.2>`_ - 2024-06-04
=====================================================================================

Changed
^^^^^^^

- CHORE: Bump development version to 0.2.dev0 `#44 <https://github.com/ansys/pyconceptev/pull/44>`_
- chore: update CHANGELOG for v0.1.1 `#48 <https://github.com/ansys/pyconceptev/pull/48>`_
- DOCS: Fix non clickable cards `#49 <https://github.com/ansys/pyconceptev/pull/49>`_


Miscellaneous
^^^^^^^^^^^^^

- DOCS: Update URLs in README.rst `#50 <https://github.com/ansys/pyconceptev/pull/50>`_

`0.1.1 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.1>`_ - 2024-06-03
=====================================================================================

Changed
^^^^^^^

- CHORE: update CHANGELOG for v0.1.0 `#46 <https://github.com/ansys/pyconceptev/pull/46>`_
- CI: Fix release jobs `#47 <https://github.com/ansys/pyconceptev/pull/47>`_

`0.1.0 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.0>`_ - 2024-06-03
=====================================================================================

Changed
^^^^^^^

- CHORE: Update following OSS review `#36 <https://github.com/ansys/pyconceptev/pull/36>`_
- First-pass of overall doc review `#39 <https://github.com/ansys/pyconceptev/pull/39>`_
- DOCS: Rework example documentation `#43 <https://github.com/ansys/pyconceptev/pull/43>`_
- CHORE: Clean up ci_cd.yml and pyproject.toml `#45 <https://github.com/ansys/pyconceptev/pull/45>`_


Miscellaneous
^^^^^^^^^^^^^

- CHORE: Second pass of oss code review `#37 <https://github.com/ansys/pyconceptev/pull/37>`_
- Doc edits based on skimming rendered doc `#41 <https://github.com/ansys/pyconceptev/pull/41>`_

.. vale on